--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<strong>Email</strong>
-				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="224f0c43514b4f43494d524d574e4d5162454f434b4e0c414d4f">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">
+				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="ddb0f3bcaeb4b0bcb6b2adb2a8b1b2ae9dbab0bcb4b1f3beb2b0">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("data-cfhash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}t.parentNode.removeChild(t);}}catch(u){}}()/* ]]> */</script></div>
 			</div>
 			<div class="col-sm-6">
@@ -244,11 +244,11 @@ h4 span:first-child {
 			<div class="row">
 				<div class="col-sm-6">
 					<strong class="network">
-						Resume Source
+						LinkedIn
 					</strong>
 					<div class="username">
 						<div class="url">
-							<a href="http://github.com/masimakopoulos/resume">This Resume is built from this Github Repo</a>
+							<a href="https://gr.linkedin.com/in/masimakopoulos">masimakopoulot</a>
 						</div>
 					</div>
 				</div>
@@ -305,6 +305,7 @@ h4 span:first-child {
 					<li class="bullet">Built various microservices using Node.js and achieving low latency - high throughput scalable infrastructures</li>
 					<li class="bullet">Setup Continuous Deployment scenarios across services and infrastuctures</li>
 					<li class="bullet">OrientDB graph database design</li>
+					<li class="bullet">technologies: Node, AngularJS, D3, C#, WebApi 2, Ninject, EF6, MSSQL, OrientDB, ElasticSearch, Cassandra, Redis, NUnit, Mocha/Tape, Socket.io, Teamcity CI, Azure PaaS &amp; IaaS, Puppet, Powershell, Webpack</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -329,6 +330,7 @@ h4 span:first-child {
 					<li class="bullet">Helped the dev team migrate from VB6 to C#</li>
 					<li class="bullet">Created a gamified module for 3D visualizing all the 2D mapping artifacts and exporing strategic options in 3D</li>
 					<li class="bullet">Improved C GIS calculation libraries by migrating them to C# and using parallelism to improve performance</li>
+					<li class="bullet">technologies: C#, VB6, C, SlimDX, EF4.0, Oracle 11g, MapObjects, ArcGIS, GDAL, Mercurial, TeamCity CI, InnoSetup, in-house communication protocols</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -353,6 +355,7 @@ h4 span:first-child {
 					<li class="bullet">Build various web applications (intranet/internet) and corporate web sites</li>
 					<li class="bullet">Consulted on improving production through the use of modern technologies</li>
 					<li class="bullet">SEO, online marketing &amp; campaigns</li>
+					<li class="bullet">technologies: C#, MySql, Actionscript, Flash, HTML/CSS, Drupal</li>
 				</ul>
 			</div>
 			</div>
@@ -379,6 +382,10 @@ h4 span:first-child {
 				<div class="studyType">
 					MBA
 				</div>
+				<h4>Courses</h4>
+				<ul class="courses">
+					<li>Thesis: The effects of CRM technology in performance of its human resources department sales</li>
+				</ul>
 			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
@@ -393,6 +400,10 @@ h4 span:first-child {
 				<div class="studyType">
 					MSc
 				</div>
+				<h4>Courses</h4>
+				<ul class="courses">
+					<li>Thesis: Forensic Evidence Collection Support System using Portable Technology</li>
+				</ul>
 			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
@@ -407,6 +418,10 @@ h4 span:first-child {
 				<div class="studyType">
 					BSc
 				</div>
+				<h4>Courses</h4>
+				<ul class="courses">
+					<li>Thesis: Khepera miniature robot featuring cockroach behaviour model development through neural-networks and knowledge based systems.</li>
+				</ul>
 			</div>
 			</div>
 		</div>
@@ -420,7 +435,7 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
-					<span></span>
+					<span>Lambda Prize</span>
 				</h4>
 				<div class="date pull-right">
 					<em>Awarded</em>
